Make grid responsive and fix backface visibility on safari

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -7,3 +7,7 @@
 .is-flipped {
     transform: rotateY(180deg);
 }
+
+.backface-hidden {
+    backface-visibility: hidden;
+}
